syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "io/aggregator/entity/transaction_merchant_key.proto";

package io.aggregator.entity;

option java_outer_classname = "SubSecondEntity";

message SubSecondActivated {
  MerchantKey merchant_key = 1;
  int64 epoch_sub_second = 2;
}

message SubSecondLedgerItemsAdded {
  MerchantKey merchant_key = 1;
  int64 epoch_sub_second = 2;
  repeated LedgerEntry ledger_entries = 3;
  google.protobuf.Timestamp timestamp = 4;
}

message SubSecondAggregated {
  MerchantKey merchant_key = 1;
  int64 epoch_sub_second = 2;
  google.protobuf.Timestamp last_update_timestamp = 3;
  google.protobuf.Timestamp aggregate_request_timestamp = 4;
  string payment_id = 5;
  repeated MoneyMovement money_movements = 6;
}

message SubSecondState {
  MerchantKey merchant_key = 1;
  int64 epoch_sub_second = 2;
  int64 epoch_second = 3;
  int64 epoch_minute = 4;
  int64 epoch_hour = 5;
  int64 epoch_day = 6;
  repeated LedgerEntry ledger_entries = 7;
  google.protobuf.Timestamp last_update_timestamp = 8;
}

message LedgerEntry {
  TransactionKey transaction_key = 1;
  int64 epoch_sub_second = 2;
  string amount = 3;
  google.protobuf.Timestamp timestamp = 4;
  google.protobuf.Timestamp aggregate_request_timestamp = 5;
  string payment_id = 6;
}
